* scales: if breaks are a named vector, the names will be used as labels
  (thanks to suggestion by David Kahle)
* scales: all scales now have legend parameter, which defaults to TRUE.  
  Setting to false will prevent that scale from contributing to the legends.
  (Implements #27)
* aesthetics: when _setting_ an aesthetic, you may only set it to a single 
  value.  This was always a good idea, but now it is enforced with an 
  informative error message.
* xlim, ylim: fix bug when setting limits of discrete scales
* labels are now stored in the options, rather than in individual scales.  
  This fixes a long standing bug where it was not easy to set the label for
  computed variable, such as the y axis on a histogram. Additionally, it means
  default scales are only added to the plot until just prior to plotting, 
  instead of the previous behaviour where scales where added as layers were
  added - this could cause problems if you layer modified the plot.
  (Implements #28)
* scale_shape_discrete, scale_size_continuous, scale_alpha and
  scale_linetype_discrete added to scales to match naming convention of all
  other scales (Fixes #47)
* scale_colour_gradient, scale_colour_gradient2 & scale_colour_gradientn now
  have formatter argument to match scale_continuous
* legends will only merge if both the title and all labels are the same.
  (Fixes #16)
* Fix for bug #19: Legend with three constraints doesn't work 
* Legend: correctly calculate label widths for all font sizes.  (Fixes #38)
* facet_wrap: now sets aspect ratio correctly
* coord_equal: when ratio = NULL (the default), will adjust the aspect ratio
  of the plot, rather than trying to extend the shortest scale.
* coord_equal: now works with non-linear scales (fixes #13)
* coord_trans now respects scale expand parameter (expansion occurs after 
  tranformation) (Fixes #14)
* coord_cartesian now correctly sets limits when one or both of the position
  scales are non-linear.  (Fixes #17)