@@ -61,7 +61,8 @@ ScaleContinuous <- proto(Scale, funEnvir = globalenv(), {
   # By default, a continuous scale does no transformation in the mapping stage
   # See scale_size for an exception
   map <- function(., values) {
-    as.numeric(ifelse(values %inside% .$output_set(), values, NA))
+    trunc <- !is.finite(values) | values %inside% .$output_set()
+    as.numeric(ifelse(trunc, values, NA))
   }
 
   # By default, the range of a continuous scale is the same as its
