@@ -46,3 +46,6 @@ ggplot2 0.8.5 (2009-XX-XX) ----------------------------------------
   tranformation) (Fixes #14)
 * coord_cartesian now correctly sets limits when one or both of the position
   scales are non-linear.  (Fixes #17)
+* x and y position can be set to Inf or -Inf to refer to the top/right and 
+  bottom/left extents of the panel (implements #18)
+* geom_hline and geom_vline now work with coord_flip (fixes #30)
